<resources>
    <string name="app_name">Movie Now</string>
    <string name="movies">MOVIES</string>
    <string name="tv_series">TV SERIES</string>
    <string name="bg_header_gradient">bg_header_gradient</string>
    <string name="poster">Poster</string>
    <string name="detail_poster_header">Detail Poster Header</string>
    <string name="button_back_from_detail">Button Back From Detail</string>
    <string name="main_background">Main Background</string>
    <string name="overview">Overview</string>
    <string name="text_desc">Follows the heroic efforts of the crypto-zoological agency Monarch as its members face off against a battery of god-sized monsters, including the mighty Godzilla, who collides with Mothra, Rodan, and his ultimate nemesis, the three-headed King Ghidorah. When these ancient super-species, thought to be mere myths, rise again, they all vie for supremacy, leaving humanity very existence hanging in the balance.</string>
    <string name="userscore">User Score</string>
    <string name="from_themoviedb_org">themoviedb.org</string>
    <string name="text_popularity">Popularity</string>
    <string name="director">Director : %s</string>
    <string name="stars">Stars : %s</string>
    <string name="popularity">%f</string>
    <string name="runtime">%d Minutes</string>
    <string name="image_slider">Image Slider</string>
    <string name="image_cast">Image Cast</string>
</resources>